Widen item list to avoid overflow

--- a/static/styles/itemlist.css
+++ b/static/styles/itemlist.css
@@ -1,11 +1,11 @@
 .item-info-wrapper {
   float: left;
   padding-top: 5px;
-  width: 520px;
+  width: 530px;
 }
 .item-in-cart {
   height : 80px;
-  width : 590px;
+  width : 600px;
   padding: 10px;
 }
 .item-in-cart-img {
